# MiniChatBot

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
benchmarks/: prompts.yaml
configs/: cpu_smoketest.yaml  debug_shakespeare.yaml  pretrain_fineweb.yaml  pretrain_shakespeare.yaml  pretrain_shakespeare_char.yaml  pretrain_small.yaml  pretrain_tinystories.yaml  rl_gsm8k.yaml  rl_smoketest.yaml  sft_fineweb.yaml  sft_shakespeare.yaml  sft_smoketest.yaml  sft_tinystories.yaml
configs/1.3M/: cpu_smoketest.yaml  debug_shakespeare.yaml  pretrain_shakespeare_char.yaml  rl_smoketest.yaml  sft_smoketest.yaml
configs/100M/: pretrain_fineweb.yaml  rl_gsm8k.yaml  sft_fineweb.yaml
configs/10M/: pretrain_shakespeare.yaml  sft_shakespeare.yaml
configs/29M/: pretrain_small.yaml  pretrain_tinystories.yaml  sft_tinystories.yaml
minichatbot/: config.py
minichatbot/chat/: __init__.py  template.py
minichatbot/data/: __init__.py  base.py  corpus_iter.py  pretrain.py  rl.py  sft.py
minichatbot/inference/: __init__.py  benchmark.py  cli.py  generator.py  text_generator.py
minichatbot/model/: __init__.py  base.py
minichatbot/rl/: __init__.py  rollout.py
minichatbot/tokenizer/: __init__.py  base.py  bpe.py
minichatbot/training/: builders.py  cli.py  optim.py  rl_runner.py  rl_trainer.py  runner.py  trainer.py
minichatbot/utils/: __init__.py  checkpoints.py  io.py  model_config_check.py  registry.py  torch_helpers.py
scripts/: chat.py  download_corpus.py  download_sft_data.py  generate.py  make_sft_smoketest_data.py  prepare_data.py  pretrain.py  setup.ps1  setup.sh  sft.py  train_tokenizer.py
scripts/data/: download_corpus.py  download_rl_data.py  download_sft_data.py  prepare_data.py  (+3 more)
(+48 files in other folders)
